# pr-agent-bench

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.infra.yml  pyproject.toml  requirements.txt
src/advisory_miner/: __init__.py  advisories.py  cli.py  collector.py  confidence.py  config.py  dashboard.py  eval.py  extractors.py  github_client.py  langfuse_tracing.py  models.py  openai_client.py  persistence.py  runtime.py  temporal_app.py
src/advisory_miner/agents/: __init__.py  advisory_parser.py  critic.py  evidence.py  fix_finder.py  fix_verifier.py  introducer_classifier.py  introducer_finder.py  investigator.py  langgraph_workflow.py  model_reviewer.py  orchestrator.py  patterns.py  release_fix_finder.py  sanity_validator.py  validator.py
src/advisory_miner/dockerize/: __init__.py  census.py  detect.py  generator.py  runner.py  selector.py
src/advisory_miner/enrichers/: __init__.py  enrichment.py
src/advisory_miner/storage/: __init__.py  postgres.py
test_dataset/: advisories_with_repos.json  labeled_input.json  labels.json  manifest.json
tests/: test_advisory_parser.py  test_analysis.py  test_collector.py  test_confidence.py  test_dockerize.py  test_enrichment.py  test_eval.py  test_fix_verifier.py  test_framework_integrations.py  test_git_tools.py  test_introducer_classifier.py  test_introducer_finder.py  test_investigator.py  test_langgraph_workflow.py  test_model_reviewer.py  test_orchestrator_parallel.py  test_persistence.py  test_release_fix_finder.py  test_runtime.py  test_validator.py
(+3 files in other folders)
