[project]
name = "advisory-miner"
version = "0.1.0"
description = "GitHub advisory miner for fixing and bug-introducing commits"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langfuse>=4.0.0",
  "langgraph>=1.2.0",
  "psycopg[binary]>=3.3.2",
  "temporalio>=1.29.0",
]

[project.scripts]
advisory-miner = "advisory_miner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advisory_miner"]
